src/test/deca/context/valid/sansObjet/castDirect.deca
// Description :
//    Cast direct d'une valeur float à int
//
// Resultats :
// ok

{
    int a = (int) (0.5);
}